// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should not render fields when the schema contains a visibleCondition evaluating false 1`] = `
<div
  class="grid grid"
>
  <div
    class="section gridSection colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      />
    </div>
    <div
      class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <div
          class="fieldContainer"
        >
          <div
            class="field"
          >
            <input
              type="text"
            />
          </div>
        </div>
        <div
          class="errorLabel"
        />
      </div>
    </div>
  </div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="/text"
      >
        Text
      </label>
      <div
        class="fieldContainer"
      >
        <div
          class="field"
        >
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</div>
`;

exports[`Should render field types based on schema 1`] = `
<div
  class="grid grid"
>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="/text"
      >
        Text
      </label>
      <div
        class="fieldContainer"
      >
        <div
          class="field"
        >
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="/datetime"
      >
        Datetime
      </label>
      <div
        class="fieldContainer"
      >
        <div
          class="field"
        >
          <input
            type="datetime"
          />
        </div>
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</div>
`;

exports[`Should render nested field types with based on schema 1`] = `
<div
  class="grid grid"
>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="/test/text"
      >
        Text
      </label>
      <div
        class="fieldContainer"
      >
        <div
          class="field"
        >
          <input
            type="text"
            value="Text"
          />
        </div>
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="/test/datetime"
      >
        Datetime
      </label>
      <div
        class="fieldContainer"
      >
        <div
          class="field"
        >
          <input
            type="datetime"
            value="DateTime"
          />
        </div>
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</div>
`;

exports[`Should render nested sections 1`] = `
<div
  class="grid grid"
>
  <div
    class="section gridSection colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      >
        Section 1
      </div>
    </div>
    <div
      class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="/item11"
        >
          Item 1.1
        </label>
        <div
          class="fieldContainer"
        >
          <div
            class="field"
          >
            <input
              type="text"
            />
          </div>
        </div>
        <div
          class="errorLabel"
        />
      </div>
    </div>
    <div
      class="section gridSection colSpan colSpan-12 space-before-0 space-after-0"
    >
      <div
        class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
      >
        <div
          class="divider"
        >
          Section 1.1
        </div>
      </div>
    </div>
  </div>
  <div
    class="section gridSection colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      >
        Section 2
      </div>
    </div>
    <div
      class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="/item21"
        >
          Item 2.1
        </label>
        <div
          class="fieldContainer"
        >
          <div
            class="field"
          >
            <input
              type="text"
            />
          </div>
        </div>
        <div
          class="errorLabel"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render sections with colSpan 1`] = `
<div
  class="grid grid"
>
  <div
    class="section gridSection colSpan colSpan-8 space-before-0 space-after-0"
  >
    <div
      class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      >
        Section 1
      </div>
    </div>
    <div
      class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="/item11"
        >
          Item 1.1
        </label>
        <div
          class="fieldContainer"
        >
          <div
            class="field"
          >
            <input
              type="text"
            />
          </div>
        </div>
        <div
          class="errorLabel"
        />
      </div>
    </div>
  </div>
  <div
    class="section gridSection colSpan colSpan-4 space-before-0 space-after-0"
  >
    <div
      class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      >
        Section 2
      </div>
    </div>
    <div
      class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="/item21"
        >
          Item 2.1
        </label>
        <div
          class="fieldContainer"
        >
          <div
            class="field"
          >
            <input
              type="text"
            />
          </div>
        </div>
        <div
          class="errorLabel"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render sections without label 1`] = `
<div
  class="grid grid"
>
  <div
    class="section gridSection colSpan colSpan-8 space-before-0 space-after-0"
  >
    <div
      class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="/item11"
        >
          Item 1.1
        </label>
        <div
          class="fieldContainer"
        >
          <div
            class="field"
          >
            <input
              type="text"
            />
          </div>
        </div>
        <div
          class="errorLabel"
        />
      </div>
    </div>
  </div>
  <div
    class="section gridSection colSpan colSpan-4 space-before-0 space-after-0"
  >
    <div
      class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      >
        Section 2
      </div>
    </div>
    <div
      class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="/item21"
        >
          Item 2.1
        </label>
        <div
          class="fieldContainer"
        >
          <div
            class="field"
          >
            <input
              type="text"
            />
          </div>
        </div>
        <div
          class="errorLabel"
        />
      </div>
    </div>
  </div>
</div>
`;
